--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
+
 table, tr, th, td {
     border: 1px solid black;
     border-collapse: collapse;
 }
-section{border: 1px solid black;
-margin: 5px;
+section{
+    border: 1px solid black;
+    margin: 5px;
 }
 #encabezado{
     text-align: center;
